# agent-evolve

./: .gitignore  PLAN.md  README.md  install.py  pyproject.toml
.claude/skills/evolve/: SKILL.md
.claude/skills/explorer/: SKILL.md
.claude/skills/reviewer/: SKILL.md
.claude/skills/supervisor/: SKILL.md
docs/: examples.md  manifest.md  skills.md
examples/: agent-evolve.yaml  demo-report.html  demo_run.py  evolve-graph.mmd  evolve-report.html
skills/explorer/: SKILL.md
skills/supervisor/: SKILL.md
src/agent_evolve/: __init__.py  cli.py  config.py  models.py
src/agent_evolve/backends/: __init__.py  base.py  github.py  gitlab.py  local.py
src/agent_evolve/eval/: __init__.py  equivalence.py  runner.py
src/agent_evolve/sandbox/: __init__.py  docker_runner.py
src/agent_evolve/scope/: __init__.py  enforcer.py
src/agent_evolve/viz/: __init__.py  graph.py  html_report.py  mermaid.py
tests/: conftest.py  test_backends.py  test_config.py  test_equivalence.py  test_eval_runner.py  test_scope.py  test_viz.py
